test/cli/test/mock-gce-resource-files/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
globalContextEntries:
- data: null
  name: gctxentry-inline-deployments
  resourceFiles:
  - gce-deployments.yaml
kind: Test
metadata:
  name: mock-gce-resource-files
policies:
- policy.yaml
- policy-vpol.yaml
resources:
- resources.yaml
results:
- kind: Deployment
  policy: check-deployment-replicas
  resources:
  - test-ns/test-deployment
  result: pass
  rule: check-min-replicas
- isValidatingPolicy: true
  kind: Deployment
  policy: check-deployment-replicas-cel
  resources:
  - test-ns/test-deployment
  result: pass
variables: values.yaml
