test/cli/test/mock-gce-resource-files/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
globalValues:
  request.operation: CREATE
kind: Values
